styles/main.less
@import 'variables';
@import 'http://populr.me/assets/developers/populr_mixins.less';
@import 'lesshat';
@import 'grid';

@import 'normalize.css';
@import 'icons';
@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&.css);

@columns: 12;
@column-width: 40;
@gutter-width: 20;
@total-width: 100%;
@border-radius: 4px;

@off-white: #f3f3f3;
@light-gray: #828282;
@dark-gray: #565656;
@lighter-custom-color: desaturate(lighten(@custom-color, 35%), 10%);
@darker-custom-color: darken(@custom-color, 12%);

@font-size-bump: 1px;

@baseline: 21px + @font-size-bump;
@normal-font-size: 13px + @font-size-bump;
@header-font-size: 19px + @font-size-bump;
@large-header-font-size: 34px + @font-size-bump;
@title-font-size: 55px + @font-size-bump;

/* MIXINS */
.text-shadow() {
  text-shadow: 1px 1px 1px rgba(0,0,0,0.61);
}

.file-icon(@width, @file-font-size, @background-color) {
  .file {
    display: inline-block;
    width: @width;
    height: @width * 1.2;
    background: @custom-color;
    position: relative;
    z-index: 1;
    .border-radius(@border-radius / 2);
    color: #fff;
    text-transform: uppercase;
    font-weight: bold;
    text-align: center;
    font: bold @file-font-size 'Lucida Console', Monaco, monospace;
    line-height: @width * 1.2;
  }
  .file:before {
    content: " ";
    width: @width / 2.8;
    height: @width / 2.8;
    display: block;
    position: absolute;
    background: @darker-custom-color;
    top: 0;
    right: 0;
    .border-bottom-left-radius(@border-radius / 2);
    z-index: 2;
  }
  .file:after {
    content: " ";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 3;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 (@width / 2.8) (@width / 2.8) 0;
    border-color: transparent @background-color transparent transparent;
  }
}

.clearfix() {
  zoom: 1;
  &:after {
    display: block;
    visibility: hidden;
    height: 0;
    clear: both;
    content: ".";
  }
}


/* BASIC */
body {
  font: @normal-font-size~'/'@baseline 'PT Sans', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
  color: @light-gray;
}

p, h1, h2, h3 {
  padding: 0;
  margin: 0;
}

h1, h2, h3 {
  font-weight: bold;
  line-height: @baseline * 2;
}

h2 {
  font-size: @header-font-size;
  color: @dark-gray;
  line-height: @baseline;
}

.asset-title {
  margin-bottom: @baseline / 2;
}

a {
  color: @custom-color;
}

ul, ol {
  padding-left: 0;  // hanging bullets
}

ul li {
  list-style: none;
  position: relative;
  &:before {
    content: "\2022";
    line-height: 0;
    position: absolute;
    top: @baseline / 2;
    left: -.8em;
  }
}

ol {
  counter-reset: section;
}

ol li {
  list-style: none;
  position: relative;
  counter-increment: section;
  &:before {
    content: counter(section) '.';
    line-height: 0;
    position: absolute;
    top: @baseline / 2;
    left: -.8em;
  }
}

button, a.btn {
  border: 0;
  background: @custom-color;
  color: @off-white;
  .border-radius(@border-radius);
  line-height: @baseline;
  cursor: pointer;
  text-decoration: none;
  .transition(~'background 80ms ease-in-out');
  padding: 4px 8px;
  &.btn-large {
    padding: 8px 10px;
  }
  &:hover {
    background: @darker-custom-color;
  }
}

/* STRUCTURE */
body {
  text-align: center;
}

#pop {
  width: 740px;
  margin: 0 auto;
  text-align: left;
  .clearfix();
  padding-bottom: @baseline * 2;
}

#main-region {
  width: 740px - unit(@gutter-width, px);
  padding: unit(@gutter-width, px) unit(@gutter-width / 2, px);
}

.columnizer-row {
  .clearfix();
  margin-top: @baseline * 2;
  &:first-child {
    margin-top: 0;
  }
}
.columnizer-col1 {.column(12, 12);}
.columnizer-col2 {.column( 6, 12);}
.columnizer-col3 {.column( 4, 12);}



/* STYLE */
#pop-title {
  margin: @baseline * 2 0;
  font-size: @title-font-size;
  font-weight: bold;
  color: @off-white;
  line-height: @baseline * 3;
  text-shadow: 2px 2px 2px rgba(0,0,0,0.61);
}

#main-region, #pop-logo img, #meta {
  background: @off-white;
  .box-shadow(~'inset 0 0 24px rgba(0,0,0,0.11), 0 0 5px rgba(0,0,0,0.31)');
  .border-radius(@border-radius);
}

#pop-logo {
  text-align: center;
}

#pop-logo img, #meta {
  margin: 0 auto;
  display: block;
  padding: unit(@gutter-width, px);
  .border-radius(0 0 @border-radius @border-radius);
}

#meta {
  position: fixed;
  top: auto;
  right: 0;
  text-align: center;
  padding: unit(@gutter-width / 2, px);
  & .addthis_button_facebook_like {width: 66px;}
  width: 60px;
  .border-radius(@border-radius 0 0 @border-radius);
  background: fade(@custom-color, 50%);
}

#pop-sharing {
  padding: 0;
}

#pop-sharing a {
  display: block;
}

#pop-links {
  margin: 0;
}

.has-sharing #pop-links {
  margin: @baseline / 2 0 0 0;
  padding-top: @baseline / 2;
  border-top: 1px solid mix(@dark-gray, @custom-color);
}

#pop-links li:before {display: none;}

.columnizer-row-contents-text {
  width: 752px - (6px + unit(@gutter-width / 2, px));
  margin-left: -6px - unit(@gutter-width / 2, px);
  padding-left: 6px + unit(@gutter-width / 2, px);
  padding-top: @baseline * 2;
  padding-bottom: @baseline * 2;
  background-color: @custom-color;
  .box-shadow(~'0 1px 2px rgba(0, 0, 0, 0.47)');
  text-align: center;
  .asset-container {
    margin-left: 0;
  }
}

.columnizer-row-contents-text, .columnizer-row-contents-text h2 {
  color: @off-white;
  .text-shadow();
}

.asset-type-imagegroup {
  img {
    .border-radius(@border-radius);
    z-index: 1;
    position: relative;
  }
  h2 {
    padding-top: @baseline;
  }
}



.columnizer-row:first-child.columnizer-row-contents-imagegroup .columnizer-col {
  width: 740px;
  display: block;
  margin: 0;
  .asset {
    margin-top: unit(-@gutter-width, px);
    width: 740px;
    margin-left: unit(-@gutter-width / 2, px);
    .populr-image-slider {
      z-index: 1;
    }
    img {
      .border-radius(@border-radius @border-radius 0 0);
    }
    &:after {
      content: " ";
      display: block;
      width: 752px;
      height: @baseline;
      margin-left: -6px;
      background-color: @custom-color;
      .box-shadow(~'0 1px 2px rgba(0, 0, 0, 0.47)');
    }  
  }
  .text {
    .text-shadow();
    z-index: 2;
    position: absolute;
    max-width: 740px - unit(@gutter-width * 2, px);
    padding: (@baseline / 2) unit(@gutter-width, px);
    bottom: @baseline * 3;
    background: fade(@custom-color, 50%);
    .border-radius(0 @border-radius @border-radius 0);
  }
  .asset-title {
    margin: 0;
  }
}

.asset-type-imagegroup .cover {
  z-index: 2;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  .bg {
    background: @custom-color;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    .opacity(0.65);
    .border-radius(@border-radius);
  }
  .view {
    position: absolute;
    top: @baseline;
    right: 0;
    .box-shadow(~'-1px 1px 1px rgba(0,0,0,0.3)');
    background: @custom-color;
    color: @off-white;
    padding: 0 8px 2px 8px;
  }
}

.columnizer-row:first-child .asset-type-imagegroup.asset-size-1, .asset-type-text.asset-size-1 {
  h2 {
    font-size: @large-header-font-size;
    color: @off-white;
    line-height: @baseline * 2;
    padding-top: 0;
  }
  .body, .description {
    color: @off-white;
    font-weight: bold;
    letter-spacing: 1px;
    .text-shadow();
  }
  a {
    color: @off-white;
  }
}

.wrap {
  .clearfix();
}

.asset-type-imagegroup .wrap .asset-title {
  padding-top: 0;
}

.columnizer-row:nth-child(odd) .wrap {
  .populr-image-slider {
    float: left;
    margin-right: unit(@gutter-width / 2, px);  
  }
}

.columnizer-row:nth-child(even) .wrap {
  .populr-image-slider {
    float: right;
    margin-left: unit(@gutter-width / 2, px);  
  }
}

.columnizer-row-contents-imagegroup-imagegroup-imagegroup {
  .slide {
    min-height: 165px;
    overflow: hidden;
  }
}

.columnizer-row-contents-imagegroup-imagegroup-imagegroup-imagegroup {
  .slide {
    min-height: 225px;
    overflow: hidden;
  }
}

.documents, .documents li {
  list-style: none;
  padding: 0;
  margin: 0;
  &:before {
    content: "";
    display: none;
  }
}

.documents {
   margin-top: @baseline;
}

.asset-type-documentgroup.asset-size-2, .asset-type-documentgroup.asset-size-3 {
  .documents li {
    .file-icon(30px, 8px, @off-white);
    a {
      display: inline-block;
      min-height: 30px * 1.2;
      height: auto !important;
      height: 30px * 1.2;
      line-height: 30px * 1.2;
      text-decoration: none;
    }
    .file {
      position: absolute;
    }
    .filename {
      display: inline-block;
      vertical-align: middle;
      line-height: @baseline;
      padding-left: 30px + @normal-font-size;
    }
  }
}

.asset-type-documentgroup.asset-size-1 {
  .documents li {
    background: @lighter-custom-color;
    .file-icon(40px, @normal-font-size - 3px, @lighter-custom-color);
    padding: unit(@gutter-width, px);
    margin-top: @baseline;
    .border-radius(@border-radius);
    display: table;
    .box-sizing(border-box);
    width: 100%;
    color: @custom-color;
    .meta, .download {
      position: relative;
      display: table-cell;
      min-height: 40px * 1.2;
      height: auto !important;
      height: 40px * 1.2;
      line-height: 40px * 1.2;
    }
    .meta {
      width: 100%;
    }
    .download {
      white-space: nowrap;
    }
    .file {
      position: absolute;
    }
    .filename {
      display: inline-block;
      vertical-align: middle;
      line-height: @baseline;
      padding: 0 @normal-font-size 0 (40px + @normal-font-size);
    }
  }
}

#populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);


@media screen and (max-width: 905px) {
  #meta {
    position: relative;
    width: 720px;
    & .addthis_button_facebook_like {width: auto;}
    margin-bottom: @baseline;
  }
  #pop-sharing > a {
    display: inline-block;
    margin-left: 25px;
    vertical-align: top;
    &:first-child {
      margin-left: 0;
    }
  }
}


@media screen and (max-width: 752px) {
  
  #populr > .mobile-reset();
  
  #main-region, #meta {
    width: 97% !important;
    padding: unit(@gutter-width, px);
    .box-sizing(border-box);
    margin: 0 auto;
  }

  #meta {margin-bottom: @baseline;}

  .columnizer-row {
    width: auto !important;
    margin: @baseline * 2 0 0 0 !important;
  }

  .columnizer-col {
    display: block !important;
    margin: 0 0 0 0 !important;
  }

  .columnizer-row-contents-text {
    margin: @baseline * 2 0 0 0;
    padding-left: 10px;
    padding-right: 10px;
    .box-shadow(~'none !important');
  }

  .columnizer-row:first-child.columnizer-row-contents-imagegroup {
    width: 100% !important;
    margin: auto !important;
    .asset:after {
      width: 100% !important;
      margin: 0 !important;
      .box-shadow(~'none !important');
    }
    .img {
      .border-radius(@border-radius);
    }
    .bg {
      .border-radius(@border-radius);
    }
  }

  .columnizer-row:first-child .asset-type-imagegroup.asset-size-1 {
    width: 100% !important;
    margin: auto !important;
  }
}

